# friendly-banter

./: .dockerignore  .gitmodules  README.md  asset-manifest.json  index.html  minikube_build.sh  package-lock.json  package.json
client/: package-lock.json  package.json
client-ng/: README.md  package-lock.json  package.json
client-ng/src/: bootstrap.ts  index.html  main.ts
client-ng/src/app/: app.component.ts  app.module.ts  processor.service.ts
client-ng/src/app/pixi/: pixi.component.html  pixi.component.ts
client/src/: App.tsx
client/src/components/: chat_form.tsx  chat_messages.tsx  pure_canvas.tsx
client/src/services/: serve.tsx  wasm_runner.tsx
client/wasm/: .gitignore  Cargo.toml
client/wasm/src/: common.rs  lib.rs  processor.rs  runtime.rs
common/: Cargo.toml  turbulence
common/src/: buffer.rs  lib.rs  message.rs  multiplexer.rs  processor.rs  runtime.rs
config/: webpack.config.js
server/: Cargo.toml  Dockerfile  fleet.yaml  gameserver.yaml  gameserverallocation.yaml  webrtc-unreliable
server/src/: cluster.rs  game.rs  main.rs  runtime.rs
server/src/game/: universe.rs
src/: bootstrap.tsx
static/css/: 3.ab7136cd.chunk.css  3.ab7136cd.chunk.css.map
static/js/: 2.c4338dc3.chunk.js  2.c4338dc3.chunk.js.map  3.13698158.chunk.js  3.13698158.chunk.js.map  3.990f269d.chunk.js  3.990f269d.chunk.js.map  3.c4e81913.chunk.js  3.c4e81913.chunk.js.map  4.9146a1aa.chunk.js  4.9146a1aa.chunk.js.map  main.3d12f1c0.chunk.js  main.3d12f1c0.chunk.js.map  runtime-main.1396ff6d.js  runtime-main.1396ff6d.js.map  runtime-main.812c6de5.js  runtime-main.812c6de5.js.map  runtime-main.816a2f17.js  runtime-main.816a2f17.js.map
wasm/: Cargo.toml  watch.sh
wasm/src/: client.rs  lib.rs  processor.rs  utils.rs
