[package]
name = "common"
version = "0.1.0"
authors = ["kriston"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
turbulence = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
instant = "0.1"
async-channel = "1.5.1"
futures-util = "0.3.7"
tracing = "0.1.21"