[package]
name = "server"
version = "0.1.0"
authors = ["kriston"]
edition = "2018"

[dependencies]
webrtc-unreliable = "0.5.0"
tokio = { version = "0.3", features = ["full"] }
hyper = "0.13.8"
tracing = "0.1.21"
tracing-subscriber = "0.2.14"
turbulence = "0.3.0"
futures = "0.3"
async-channel = "1.5.1"
tokio-compat-02 = "0.1.2"
futures-util = "0.3.7"

[dependencies.common]
path = "common"
