[package]
name = "server"
version = "0.1.0"
authors = ["kriston"]
edition = "2018"

[[bin]]
name = "server"
path = "src/main.rs"

[features]
clustered = ['agones']


[dependencies]
webrtc-unreliable = "0.5.0"
tokio = { version = "0.3", features = ["full"] }
hyper = "0.13.8"
tracing = "0.1.21"
tracing-subscriber = "0.2.14"
futures = "0.3"
async-channel = "1.5.1"
tokio-compat-02 = "0.1.2"
futures-util = "0.3.7"
rand = "0.7"
ctrlc = "3.1.7"
agones = { path = "../agones/sdks/rust", features = ["openssl"], optional = true }

[dependencies.common]
path = "common"
